--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
           - elixir: 1.17.2
             otp: 27.0
 
+          - elixir: 1.18.0
+            otp: 27.0
+
     runs-on: ubuntu-latest
 
     steps:
